removed place holders

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             I have a passion for web development and software engineering. I enjoy learning new 
             technologies and applying them to real-world projects. I currently work as general manager at KFC. 
         </p>
-        <img src="PLACE HOLDER" alt="Your Name" width="200">
+        <img src="img\20241217_182624.jpg" alt="Austin Jones" width="200">
     </section>
 
     <section id="interests">
